fix #28, make 'background-size: cover' work on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -499,6 +499,7 @@ footer.main-footer {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 .feature-photo-credit {
   background-color: rgba(0, 0, 0, 0.5);
